fix image alignment

--- a/src/styles/landing/article-environment.scss
+++ b/src/styles/landing/article-environment.scss
@@ -19,6 +19,7 @@
 
     @include media(md) {
       margin: 45px auto;
+      padding-left: 0;
     }
 
     @include media(sm) {
